--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
   min-height: 100vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #fff;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.navigation {
+  width: 100%;
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.navigation__link {
+  font-weight: bold;
+  display: inline-flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  padding: 10px 15px;
+  width: 100%;
+  text-decoration: none;
+  background-color: transparent;
+  color: #fff;
+  border: 3px solid #fff;
+  border-radius: 4px;
+  margin-right: 10px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  &:hover {
+    background-color: #fff;
+    color: #000;
   }
-  to {
-    transform: rotate(360deg);
+
+  &:last-of-type {
+    margin-right: 0px;
+  }
+}
+
+.navigation__link--active {
+  background-color: #fff;
+  border :3px solid #fff;
+  color: #000;
+}
+
+.joke__link {
+  font-weight: bold;
+  margin-top: 15px;
+  display: inline-flex;
+  text-decoration: none;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 15px 30px;
+  border-radius: 4px;
+
+  &:hover {
+    background-color: #fff;
+    color: #000;
   }
 }
